# coursework_6_ver_2

./: README.md  pyproject.toml
config/: settings.py  urls.py
fixtures/: clients.json  mailings.json  mssages.json  users.json
mailings/: admin.py  forms.py  models.py  urls.py  views.py
mailings/migrations/: 0001_initial.py  0002_initial.py
mailings/templates/mailings_app/: base.html  client_confirm_delete.html  client_detail.html  logs_list.html  mailings_confirm_delete.html  mailings_detail.html  mailings_list.html  message_confirm_delete.html  message_detail.html
mailings/templates/mailings_app/includes/: inc_base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users_app/: login.html
